--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-100 text-gray-900">
 <header class="bg-orange-500 text-white p-4">
   <div class="container mx-auto flex justify-between items-center">
-    <a href="/" class="text-2xl font-bold">Venditudo</a>
+    <a href="/" class="text-2xl font-bold">Venditudo.com</a>
     <nav class="space-x-4">
       <a href="/#produtos" class="hover:underline">Produtos</a>
       <a href="/produtos/tecnologia.html" class="hover:underline">Tecnologia</a>
