--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
 
 <section class="text-center py-16 bg-white shadow">
-  <h1 class="text-4xl font-bold mb-4">Compre com inteligência, gaste menos</h1>
+  <h1 class="text-4xl font-bold mb-4">Compre com inteligência, gaste mais</h1>
   <p class="text-lg mb-6">Curadoria dos produtos mais vendidos e bem avaliados — tudo em um só lugar.</p>
   <a href="#produtos" class="bg-orange-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-orange-600">
     Ver produtos
